# xpdf-poppler

./: .gitignore  CoreOutputDev.cc  CoreOutputDev.h  GlobalParams.cc  GlobalParams.h  GlobalParamsGUI.cc  GlobalParamsGUI.h  LICENSE  Makefile  Makefile.am  PDFCore.cc  PDFCore.h  README.md  XPDFApp.cc  XPDFApp.h  XPDFCore.cc  XPDFCore.h  XPDFTree.cc  XPDFViewer.cc  XPDFViewer.h  about-text.h  autogen.sh  config.h  configure.ac  parseargs.c  parseargs.cc  parseargs.h  poppler-api.h  xpdf-poppler-rc  xpdf-poppler.desktop  xpdf.cc  xpdfrc  zxpdf-poppler
debian/: .gitignore  changelog  control  copyright  install  rules  update-xpdf-poppler-rc  update-xpdf-poppler-rc.8  update-xpdfrc  update-xpdfrc.8  watch  xpdf-poppler.install  xpdf-poppler.manpages  xpdf-poppler.menu  xpdf-poppler.postinst  xpdf-poppler.postrm  xpdf-poppler.prerm  xpdf-wrapper  xpdf.desktop  xpdf.dirs  xpdf.install  xpdf.links  xpdf.manpages  xpdf.menu  xpdf.mime  xpdf.postinst  xpdf.postrm  xpdf.xpm  zxpdf
doc/: sample-xpdf-poppler-rc  xpdf-poppler-rc.5  xpdf-poppler.1  xpdf.1  xpdfrc.5  zxpdf-poppler.1  zxpdf.1
icons/: about.xbm  backArrow.xbm  backArrowDis.xbm  dblLeftArrow.xbm  dblLeftArrowDis.xbm  dblRightArrow.xbm  dblRightArrowDis.xbm  find.xbm  findDis.xbm  forwardArrow.xbm  forwardArrowDis.xbm  leftArrow.xbm  leftArrowDis.xbm  print.xbm  printDis.xbm  rightArrow.xbm  rightArrowDis.xbm  xpdfIcon.xpm
